objects/Referral__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>Select a category for the Referral</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Child Abuse / Neglect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependency Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family in Need of Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information and/or Referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>Enter the city where the incident occurred</inlineHelpText>
        <label>City</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Occured__c</fullName>
        <inlineHelpText>This is the date the alleged incident was reported to have actually occurred</inlineHelpText>
        <label>Date Occured</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Reported__c</fullName>
        <inlineHelpText>This is the date the alleged incident was reported</inlineHelpText>
        <label>Date Reported</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <inlineHelpText>Type of setting where the incident occurred</inlineHelpText>
        <label>Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home/Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Setting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MALatitude__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MALongitude__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mandated_Reporter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This identifies the reporting party as a lawfully mandated reporter</inlineHelpText>
        <label>Mandated Reporter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Map_the_Address__c</fullName>
        <formula>HYPERLINK(&quot;http://maps.google.com?q=&quot; &amp;  Street__c  &amp; &quot;%20&quot; &amp;  City__c  &amp; &quot;%20&quot; &amp;  State__c &amp; &quot;%20&quot; &amp;  Postal_Code__c , IMAGE(&quot;http://icons.iconarchive.com/icons/webiconset/mobile/128/maps-icon.png&quot;, &quot;Map Address in Google&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field shows a Google map of the address specified on the Referral</inlineHelpText>
        <label>Map the Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <inlineHelpText>Enter the postal code where the incident occurred</inlineHelpText>
        <label>Postal Code</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Indicator__c</fullName>
        <formula>IF(ISPICKVAL(Response_Priority__c, &quot;P1&quot;) , IMAGE(&quot;http://icons.iconarchive.com/icons/sekkyumu/developpers/32/Red-Ball-icon.png &quot;, &quot;P1&quot;),

IF(ISPICKVAL(Response_Priority__c, &quot;P2&quot;) , IMAGE(&quot;http://icons.iconarchive.com/icons/sekkyumu/developpers/32/Yellow-Ball-icon.png&quot;, &quot;P2&quot;),

IF(ISPICKVAL(Response_Priority__c, &quot;P3&quot;) , null,null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>:  This field shows a response priority icon for P1, P2 Referrals only</inlineHelpText>
        <label>Priority Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Id__c</fullName>
        <displayFormat>REF-{000000}</displayFormat>
        <inlineHelpText>The Referral Id is a system generated, unique Id</inlineHelpText>
        <label>Referral Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Reporter_Type__c</fullName>
        <inlineHelpText>Select a type that best represents the reporting party&apos;s role</inlineHelpText>
        <label>Reporter Type</label>
        <picklist>
            <picklistValues>
                <fullName>Anonymous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athletic Coach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citizen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Care Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Police/Law Enforcement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Official</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporting_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person reporting the incident</inlineHelpText>
        <label>Reporting Party</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Priority__c</fullName>
        <inlineHelpText>The response priority determines how quickly Referrals need to be investigated</inlineHelpText>
        <label>Response Priority</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Screening_Decision_Comments__c</fullName>
        <inlineHelpText>Enter any comments for the screening decision</inlineHelpText>
        <label>Screening Decision Comments</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screening_Decision__c</fullName>
        <inlineHelpText>This is the screening decision made by management for this Referral</inlineHelpText>
        <label>Screening Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Screened In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screened Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>Enter the state where the incident occurred</inlineHelpText>
        <label>State</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>IF(ISPICKVAL(Status__c , &quot;New&quot;) , IMAGE(&quot;http://icons.iconarchive.com/icons/custom-icon-design/flatastic-4/32/New-icon.png&quot;, &quot;New&quot;), 

IF(ISPICKVAL(Status__c , &quot;Screening&quot;) , IMAGE(&quot;http://icons.iconarchive.com/icons/treetog/junior/32/monitor-ok-icon.png&quot;, &quot;Screening&quot;), 

IF(ISPICKVAL(Status__c , &quot;Assessment&quot;) , IMAGE(&quot;http://icons.iconarchive.com/icons/icojam/blue-bits/32/document-check-icon.png&quot;, &quot;Assessment&quot;), 

IF(ISPICKVAL(Status__c , &quot;Investigation&quot;) , IMAGE(&quot;http://icons.iconarchive.com/icons/hopstarter/malware/32/Search-icon.png&quot;, &quot;Investigation&quot;), 

IF(ISPICKVAL(Status__c , &quot;Disposition&quot;) , IMAGE(&quot;http://icons.iconarchive.com/icons/icojam/onebit/32/exclamation-mark-green-icon.png&quot;, &quot;Disposition&quot;), 

IF(ISPICKVAL(Status__c, &quot;Null&quot;), null,null))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will display an icon based on the value in the status field</inlineHelpText>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The current status of the Referral</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Requested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <inlineHelpText>Street Address</inlineHelpText>
        <label>Street</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_category__c</fullName>
        <inlineHelpText>Sub-category options are dependent on the value in the (controlling) category picklist</inlineHelpText>
        <label>Sub-category</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Baby Doe/Disabled Infant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emotional Maltreatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Neglect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neglect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Abuse Shaken Baby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependent Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption Subsidy Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Fatality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courtesy Supervision - ICPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courtesy Supervision - ICJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emancipated Youth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent Surrender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Finalization Adoption Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialized Assessment/Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safe Haven/Deserted Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>This field will contain a high level summary for the caseworker to enter on a referral record</description>
        <inlineHelpText>Please enter a brief summary of the alleged incident of abuse/neglect</inlineHelpText>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <label>Referral</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Referral_Id__c</columns>
        <columns>NAME</columns>
        <columns>Date_Occured__c</columns>
        <columns>Date_Reported__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_category__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Indicator__c</columns>
        <columns>Response_Priority__c</columns>
        <columns>Priority_Indicator__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Investigations</fullName>
        <columns>Referral_Id__c</columns>
        <columns>NAME</columns>
        <columns>Date_Occured__c</columns>
        <columns>Date_Reported__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_category__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Indicator__c</columns>
        <columns>Response_Priority__c</columns>
        <columns>Priority_Indicator__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Investigation</value>
        </filters>
        <label>All Open Investigations</label>
    </listViews>
    <listViews>
        <fullName>New_Referral_Queue_Referral</fullName>
        <filterScope>Queue</filterScope>
        <label>New Referral Queue</label>
        <queue>New_Referral_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>P1_Referrals</fullName>
        <columns>Referral_Id__c</columns>
        <columns>NAME</columns>
        <columns>Date_Occured__c</columns>
        <columns>Date_Reported__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_category__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Indicator__c</columns>
        <columns>Response_Priority__c</columns>
        <columns>Priority_Indicator__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Response_Priority__c</field>
            <operation>equals</operation>
            <value>P1</value>
        </filters>
        <label>P1 Referrals</label>
    </listViews>
    <listViews>
        <fullName>Referrals_from_Mandated_Reporters</fullName>
        <columns>Referral_Id__c</columns>
        <columns>NAME</columns>
        <columns>Date_Occured__c</columns>
        <columns>Date_Reported__c</columns>
        <columns>Reporter_Type__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_category__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Indicator__c</columns>
        <columns>Response_Priority__c</columns>
        <columns>Priority_Indicator__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reporter_Type__c</field>
            <operation>equals</operation>
            <value>Day Care Provider,Legal Personnel,Medical Personnel,School Official</value>
        </filters>
        <label>Referrals from Mandated Reporters</label>
    </listViews>
    <listViews>
        <fullName>Screened_In_Referrals</fullName>
        <columns>Referral_Id__c</columns>
        <columns>NAME</columns>
        <columns>Date_Occured__c</columns>
        <columns>Date_Reported__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_category__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Indicator__c</columns>
        <columns>Response_Priority__c</columns>
        <columns>Priority_Indicator__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Screening_Decision__c</field>
            <operation>equals</operation>
            <value>Screened In</value>
        </filters>
        <label>Screened In Referrals</label>
    </listViews>
    <nameField>
        <label>Referral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Screened_Out_Requires_Comments</fullName>
        <active>true</active>
        <description>If Screening Decision = Screened Out then require comments</description>
        <errorConditionFormula>ISPICKVAL(Screening_Decision__c , &quot;Screened Out&quot;) &amp;&amp; ISBLANK(Screening_Decision_Comments__c )</errorConditionFormula>
        <errorDisplayField>Screening_Decision_Comments__c</errorDisplayField>
        <errorMessage>If Screening Decision = Screened Out, you MUST enter comments</errorMessage>
    </validationRules>
</CustomObject>